--- a/playbook2.yml
+++ b/playbook2.yml
@@ -11,7 +11,7 @@
       name: apache2
       state: present 
   
-  - mame: Start Apache
+  - name: Start Apache
     service:
       name: httpd
       state: started
