--- a/playbook2.yml
+++ b/playbook2.yml
@@ -9,7 +9,7 @@
   - name: install Apache
     apt:
       name: apache2
-      state: present 
+      state: absent
   
   - name: Start Apache
     service:
