--- a/playbook3.yml
+++ b/playbook3.yml
@@ -32,7 +32,7 @@
         - Restart apache2
   
   handlers:
-  - name: Restart apache2
-    service:
-      name: apache2
-      state: restarted
+    - name: Restart apache2
+      ansible.builtin.service:
+        name: apache2
+        state: restarted
