--- a/playbook-variables.yml
+++ b/playbook-variables.yml
@@ -4,9 +4,10 @@
   become: yes
 
 vars:
-  message1: privet
-  message2: world
-  secret: password123
+  dict:
+    message1: privet
+    message2: world
+    secret: password123
 
 tasks:
 - name: Print Variables
