--- a/usloviya.yml
+++ b/usloviya.yml
@@ -17,7 +17,7 @@
     apt:
       name: apache2
       state: present
-      when: ansible_os_family == "ubuntu"
+      when: ansible_os_family == "Debian"
 
   - name: Install the latest version of Apache
     ansible.builtin.dnf:
@@ -30,7 +30,7 @@
       name: apache2
       state: started
       enabled: yes
-      when: ansible_os_family == "ubuntu"
+      when: ansible_os_family == "Debian"
       
   - name: example copying file with owner and permissions
     ansible.builtin.template:
@@ -44,4 +44,4 @@
       ansible.builtin.service:
         name: apache2
         state: restarted
-        when: ansible_os_family == "ubuntu"
+        when: ansible_os_family == "Debian"
