--- a/usloviya.yml
+++ b/usloviya.yml
@@ -13,10 +13,11 @@
     debug:
       var: ansible_os_family
 
-  - name: install Apache for ubuntu
-    apt:
+  - name: Install apache httpd (state=present is optional)
+    ansible.builtin.apt:
       name: apache2
       state: present
+    when: ansible_os_family == "Ubuntu"
 
   - name: Install the latest version of Apache
     ansible.builtin.dnf:
