--- a/usloviya.yml
+++ b/usloviya.yml
@@ -13,13 +13,13 @@
     debug:
       var: ansible_os_family
 
-  - name: Install apache httpd (state=present is optional)
+  - name: Install apache  Debian
     ansible.builtin.apt:
       name: apache2
       state: present
-    when: ansible_os_family == "Ubuntu"
+    when: ansible_os_family == "Debian"
 
-  - name: Install the latest version of Apache
+  - name: Install the latest version of Apache RedHat
     ansible.builtin.dnf:
       name: httpd
       state: latest
