--- a/usloviya.yml
+++ b/usloviya.yml
@@ -12,11 +12,24 @@
   - name: check linux version
     debug:
       var: ansible_os_family
+  - block: #======Block Debian=======
+      - name: Install apache  Debian
+        ansible.builtin.apt:
+        name: apache2
+        state: present
 
-  - name: Install apache  Debian
-    ansible.builtin.apt:
-      name: apache2
-      state: present
+      - name: example copying file with owner and permissions
+        ansible.builtin.template:
+        src: "{{source_file}}"
+        dest: "{{dst_file}}"
+      notify:
+         - Restart apache2
+
+      - name: Start Apache Debian
+        service:
+        name: apache2
+        state: started
+        enabled: yes
     when: ansible_os_family == "Debian"
 
   - name: Install the latest version of Apache RedHat
@@ -24,12 +37,6 @@
       name: httpd
       state: latest
     when: ansible_os_family == "RedHat"
-  
-  - name: Start Apache
-    service:
-      name: apache2
-      state: started
-      enabled: yes
       
   - name: example copying file with owner and permissions
     ansible.builtin.template:
