--- a/usloviya.yml
+++ b/usloviya.yml
@@ -1,50 +1,42 @@
 ---
-- name: Install Apache and upload web site
+- name: Install Apache and upload web site !
   hosts: all
   become: yes
 
   vars:
     source_file: index.html
-    dst_file: /var/www/html 
-
+    dst_file: /var/www/html
 
   tasks:
-  - name: check linux version
-    debug:
-      var: ansible_os_family
-  
-  - name: Install apache  Debian
+    - name: check linux version
+      debug:
+        var: ansible_os_family
+
+    - name: Install apache httpd (state=present is optional)
       ansible.builtin.apt:
-      name: apache2
-      state: present
+        name: apache2
+        state: present
+      when: ansible_os_family == "Ubuntu"
 
-  - name: example copying file with owner and permissions
+    - name: Install the latest version of Apache
+      ansible.builtin.dnf:
+        name: httpd
+        state: latest
+      when: ansible_os_family == "RedHat"
+
+    - name: Start Apache
+      service:
+        name: apache2
+        state: started
+        enabled: yes
+
+    - name: example copying file with owner and permissions
       ansible.builtin.template:
-      src: "{{source_file}}"
-      dest: "{{dst_file}}"
+        src: "{{source_file}}"
+        dest: "{{dst_file}}"
       notify:
-       - Restart apache2
+        - Restart apache2
 
-  - name: Start Apache Debian
-    service:
-      name: apache2
-      state: started
-      enabled: yes
-  when: ansible_os_family == "Debian"
-
-  - name: Install the latest version of Apache RedHat
-    ansible.builtin.dnf:
-      name: httpd
-      state: latest
-  when: ansible_os_family == "RedHat"
-      
-  - name: example copying file with owner and permissions
-    ansible.builtin.template:
-       src: "{{source_file}}"
-       dest: "{{dst_file}}"
-  notify:
-       - Restart apache2
-  
   handlers:
     - name: Restart apache2
       ansible.builtin.service:
