--- a/usloviya.yml
+++ b/usloviya.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install Apache and upload web site !
+- name: Install Apache and upload web site !!!!!!!!!
   hosts: all
   become: yes
 
@@ -9,7 +9,7 @@
 
   tasks:
     - name: check linux version
-      debug:
+      ansible.builtin.debug:
         var: ansible_os_family
 
     - name: Install apache httpd (state=present is optional)
@@ -25,7 +25,7 @@
       when: ansible_os_family == "RedHat"
 
     - name: Start Apache
-      service:
+      ansible.builtin.service:
         name: apache2
         state: started
         enabled: yes
